--- a/api/build.gradle
+++ b/api/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     runtimeOnly 'mysql:mysql-connector-java'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.data:spring-data-rest-hal-explorer'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'javax.validation:validation-api:2.0.1.Final'
 
     // security 관련 의존성
     implementation 'org.springframework.boot:spring-boot-starter-security'
