--- a/admin-page/package.json
+++ b/admin-page/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "jwt-decode": "^3.1.2",
     "react": "^18.1.0",
+    "react-apple-signin-auth": "^1.0.9",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
@@ -21,7 +22,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set HTTPS=true&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
