--- a/api/build.gradle
+++ b/api/build.gradle
@@ -42,6 +42,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'javax.validation:validation-api:2.0.1.Final'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
+    implementation 'org.bouncycastle:bcpkix-jdk14:1.71'
+
+
+
 
     // security 관련 의존성
     implementation 'org.springframework.boot:spring-boot-starter-security'
