Feat #4 - FCM send push notification
정책 업데이트 시 조건에 맞는 유저에게 push notification 전송

--- a/api/.gitignore
+++ b/api/.gitignore
@@ -9,6 +9,7 @@ src/docs
 static/docs
 test.png
 *.p8
+*.json
 
 # Created by https://www.toptal.com/developers/gitignore/api/gradle,intellij,intellij+iml,java
 # Edit at https://www.toptal.com/developers/gitignore?templates=gradle,intellij,intellij+iml,java
