--- a/api/build.gradle
+++ b/api/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
     implementation 'org.bouncycastle:bcpkix-jdk14:1.71'
+    implementation 'com.google.firebase:firebase-admin:6.8.1'
 
 
 
