--- a/admin-page/.gitignore
+++ b/admin-page/.gitignore
@@ -1,3 +1,5 @@
+firebase-messaging-sw.js
+
 firebaseConfig.js
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
